# Maturski-rad

./: .gitattributes  README.md  pyproject.toml  requirements.txt
docs/: README.md  document.md  document.tex
src/: __main__.py  common.py  constants.py
src/commands/: clean.py  estimate.py  plot.py  record.py  synth.py
src/estimator/: __init__.py  utils.py
