[tool.poetry]
name = "maturski-rad"
version = "0.1.0"
description = ""
authors = ["GrbavaCigla <alexa.ognjanovic@protonmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
sounddevice = "^0.4.6"
scipy = "^1.11.3"
librosa = "^0.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
